# RZ-ToolBox

./: build.gradle.kts
.github/workflows/: build.yml
module/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  mountinfo_clean.cpp  zygisk.h  zygisk_mountinfo_fix.c
module/template/: module.prop
